--- a/app/package.json
+++ b/app/package.json
@@ -10,15 +10,33 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-community/checkbox": "^0.5.10",
+    "@react-native-community/datetimepicker": "^5.1.0",
+    "@react-navigation/material-top-tabs": "^6.1.1",
+    "@react-navigation/native": "^6.0.8",
+    "@react-navigation/stack": "^6.1.1",
+    "@reduxjs/toolkit": "^1.7.2",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
+    "immutability-helper": "^3.1.1",
+    "native-base": "^3.3.7",
+    "prop-types": "^15.8.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-easy-grid": "^0.2.2",
     "react-native-elements": "^3.4.2",
+    "react-native-error-boundary": "^1.1.12",
+    "react-native-gesture-handler": "~2.1.0",
+    "react-native-pager-view": "5.4.9",
     "react-native-safe-area-context": "^3.4.1",
+    "react-native-screens": "^3.12.0",
+    "react-native-svg": "^12.1.1",
+    "react-native-tab-view": "^3.1.1",
     "react-native-vector-icons": "^9.1.0",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "react-redux": "^7.2.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
